<resources>
    <string name="app_name">Biblioteca UTN</string>

    <!-- Activity Splash -->
    <string name="str_logo_desc">Logo UTN</string>

    <!-- Activity Login -->
    <string name="str_tittle">Biblioteca UTN Electronica</string>
    <string name="str_hint_user">Usuario</string>
    <string name="str_hint_pass">Contraseña</string>
    <string name="str_login">Ingresar</string>
    <string name="str_sign_up">Registrarse</string>

    <!-- Activity SignUp -->
    <string name="str_hint_email">Email</string>
    <string name="str_register">Registrar</string>

    <!-- Activity InfoList -->
    <string name="settings_desc_img">Configuracion de la app</string>

    <!-- Toolbar menu -->
    <string name="action_settings">Configuracion</string>
    <string name="action_add">Añadir</string>
    <string name="action_search">Buscar</string>
    <string name="action_log_out">Salir</string>

    <!-- Activity  Settings -->
    <!-- Fragment Settings -->
    <string name="pref_config_simple">Configuracion de estilo</string>
    <string name="pref_config_advance">Configuracion avanzada</string>

    <string name="pref_sound">Encender sonido</string>
    <string name="pref_edit">Editar Items</string>

    <string name="pref_language">Idioma</string>
    <string name="pref_background">Color de fondo</string>
    <string name="pref_text_style">Tipo de fuente</string>
    <string name="pref_text_color">Color de texto</string>
    <string name="pref_text_size">Tamaño de texto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Context menu -->
    <string name="op_edit">Modificar</string>
    <string name="op_delete">Eliminar</string>

    <!-- Dialog -->
    <string name="dialog_title">Error</string>
    <string name="dialog_msg">Complete todos los campos</string>
    <string name="dialog_positive_ok">ENTENDIDO</string>
    <string name="dialog_positive_accept">ACEPTAR</string>
    <string name="dialog_negative_cancel">CANCELAR</string>
    <!-- Toast-->
    <string name="toast_complete">Usuario o contraseña incorrectos</string>
    <string name="toast_user_repeat">El usuario ya existe</string>

    <!-- Activity Edit -->
    <string name="tittle_edit">Complete los campos que quiere editar</string>
    <string name="book_edit">Libro</string>
    <string name="subject_edit">Materia</string>
    <string name="details_edit">Detalles</string>

    <string name="edit_button">Realizar cambios</string>

    <!-- Activity Edit -->
    <string name="book_add">Libro</string>
    <string name="subject_add">Materia</string>
    <string name="details_add">Detalles</string>
    
    <string name="add_button">Agregar</string>


    <!-- Fragment Image -->
    <string name="str_photo">Portada del libro</string>
    
    <string name="pref_style">Estilo de pantalla</string>


</resources>
