<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_config_simple">
        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/back_color_entries"
            android:entryValues="@array/back_color_values"
            android:key="pref_background"
            android:title="@string/pref_background" />
        <MultiSelectListPreference
            android:defaultValue="@array/text_style_entries"
            android:entries="@array/text_style_entries"
            android:entryValues="@array/text_style_values"
            android:key="pref_text_style"
            android:title="@string/pref_text_style" />
        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/text_color_entries"
            android:entryValues="@array/text_color_values"
            android:key="pref_text_color"
            android:title="@string/pref_text_color" />
        <EditTextPreference
            android:defaultValue="14"
            android:key="pref_text_size"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_text_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_config_advance">


    </PreferenceCategory>

</PreferenceScreen>

<!--
           <ListPreference
            android:defaultValue="1"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="pref_language"
            android:title="@string/pref_language" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/style_entries"
            android:entryValues="@array/style_values"
            android:key="pref_style"
            android:title="@string/pref_style" />

   <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_sound"
            android:title="@string/pref_sound" />


         <SwitchPreference
            android:defaultValue="false"
            android:key="pref_edit"
            android:title="@string/pref_edit" />


            -->
