<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        android:orderInCategory="4"
        app:showAsAction="never" />

</menu>

    <!--    <item android:id="@+id/action_add"
            android:title="@string/action_add"
            android:icon="@drawable/ic_action_add"
            android:orderInCategory="1"
            app:showAsAction="ifRoom|withText" />
    -->